# lib6502-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: bus.rs  cpu.rs  disassembly.rs  instruction.rs  lib.rs  traits.rs
tests/: arithmetic.rs  bitshift.rs  bitwise.rs  branch.rs  control.rs  flags.rs  instructions.rs  jump.rs  load.rs  logic.rs  program.rs  rmw.rs  stack.rs  store.rs  transfer.rs
tests/common/: macros.rs  mod.rs
